--- a/FINALPROJOCT/templates/FYPAPP/add_question_choice.html
+++ b/FINALPROJOCT/templates/FYPAPP/add_question_choice.html
@@ -58,11 +58,7 @@ body {
 					<div class="col-sm-6">
 						<h2>Add <b>Question</b></h2>
 					</div>
-					<div class="col-sm-6">
-						<a href="#addCourseModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Module</span></a>
-						<a href="{% url 'FYPAPP:add_question' %}" class="btn btn-danger">Add Question</a>
-						<!-- <a href="#deleteCourseModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						 -->
-					</div>
+				
 				</div>
 			</div>
 			<form method="POST" action="#">
@@ -79,6 +75,15 @@ body {
                    </div>
                  </div>
              	<hr>
+				 <div class="col">
+					<!-- Name input -->
+					<div class="form-outline">
+					  <!-- <input type="text" id="form9Example1" name="somo" class="form-control" /> -->
+					  <label class="form-label" for="form9Example1">Topic</label>
+					  {{ form.topic }}
+					</div>
+				</div>	
+				<hr>
 				<div class="col">
 					<!-- Name input -->
 					<div class="form-outline">
@@ -125,7 +130,8 @@ body {
 				</div>	
 				<div class="mt-5">
 					<button class="btn btn-primary" type="submit">SUBMIT</button>
-
+					<button type="reset" class="btn btn-secondary ms-2">Reset</button>
+           			 <a href="{% url 'FYPAPP:question_choice_manage' %}" class="btn btn-outline-dark ms-2">List All</a>
 				</div>
                  
                  </form>
@@ -134,28 +140,7 @@ body {
              	</div>        
              </div>
 
-<h1>ddddddddddd</h1>
-<table class="table">
-	<thead>
-	  <tr>
-		<th>Question</th>
 		
-	  </tr>
-	</thead>
-	<tbody>
-		{% for cat in category%}
-	  <tr>
-		<th scope="row">1</th>
-		<td>{{cat.question}}</td>
-		
-	  </tr>
-	  {% endfor %}
-	</tbody>
-  </table>
-{{category}}
-{% for cat in category %}
-	<div>{{cat.question}}</div>
-{% endfor %}			
 </body>
 </html>
 
