--- a/FINALPROJOCT/templates/FYPAPP/question_manage.html
+++ b/FINALPROJOCT/templates/FYPAPP/question_manage.html
@@ -277,38 +277,35 @@ $(document).ready(function(){
 					<div class="col-sm-6">
 						<h2>Manage <b>Question</b></h2>
 					</div>
-					<div class="col-sm-6">
-						<!-- <a href="{% url 'FYPAPP:add_question' %}" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Module</span></a> -->
-						<a href="#deleteCourseModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>											</div>
+			
 				</div>
 			</div>
 			<table class="table table-striped table-hover">
                 
                     <thead>
                         <tr>
-                            <th>somo</th>
-                            <th>Topic</th>
-                            <!-- <th>questionTypee</th> -->
-                            <th>questionType</th>
+                            
+                            <th>Question</th>
                             <th>Action</th>
                         </tr>
                     </thead>
                     {% for question in question_manage %}
                     <tr>
-                        <td>{{question.somo}}</td>
-                        <td>{{question.topic}}</td>
+                        <td>{{question.question}}</td>
+                        <!-- <td>{{question.topic}}</td> -->
                         <!-- <td>{{data.questionType}}</td> -->
-                        <td>{{question.questionType}}</td>
+                        <!-- <td>{{question.questionType}}</td> -->
                         <td>
 							<div class="container-fluid">
 								<div class="row">
 									<div class="col-6">
-										<a href="{% url 'FYPAPP:update_question' question.id %}" class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</a>
+										<a href="{% url 'FYPAPP:update_question_short' question.id %}" class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</a>
 
 										<!-- <a href="{% url 'FYPAPP:add_question' %}" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a> -->
 										<!-- <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a> -->
 									</div>
 	
+
 									<div class="col-6">
 										<a href="{% url 'FYPAPP:update_question' question.id %}" class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</a>
 
