--- a/FINALPROJOCT/templates/authapp/register.html
+++ b/FINALPROJOCT/templates/authapp/register.html
@@ -23,7 +23,7 @@
             color: white;
         }
         .homeinfo{
-            margin-top:170px;
+            margin-top:100px;
             margin-left: 20em;
             margin-right: 20em;
             size: 23px;
@@ -53,22 +53,36 @@
             height: 100%;
             background-color: black;
         }
+        .top-header{
+            background-color: #90aac8;
+            
+        }
+        .top-header-text{
+            margin-top: -4.8em;
+        }
+        .footer{
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 60px;
+            line-height: 60px;
+            background-color: #90aac8;
+        
+        }
 
     </style>    
     <title>Exam Questions</title>
    </head>
    <body>
-    <div class="container">
-        <nav class="navba fixed-top navbar-light bg-info">
-            <div class="container-fluid">
-              <img src="{% static 'images/nit.png'%}"
-                  class="img-fluid" alt="Sample image">
-                <!-- <img src="{% static 'images/nit.png'%}"> -->
-              <h2 class="title fw-bold" >NATIONAL INSTUTUTE OF TRANSPORT</h2>
-              <h3 class="title">AUTOMATIC EXAMINATION GENERATOR</h3>
-            </div>
-          </nav>
+    <div class="top-header">
+        <img src="{% static 'images/nit.png'%}" class="img-fluid" alt="Sample image" style="width: 100px; height: 100px; border-radius: 50%;">
+
+        <div class="top-header-text">
+            <h2 class="title fw-bold" >NATIONAL INSTUTUTE OF TRANSPORT</h2>
+            <h3 class="title">AUTOMATIC EXAMINATION GENERATOR</h3>
+        </div>
     </div>
+
     <div class="homeinfo">
         <div class="line-between">
         <div class="row">
@@ -86,90 +100,60 @@
 
           <div class="col-md-6">
             <form action="#" method="POST">
-                {% csrf_token %}
-                <h3 class="fw-bold">REGISTER HERE</h3>
-                <hr>
-                <div class="form-group">
+              {% csrf_token %}
+              <h3 class="fw-bold">REGISTER HERE</h3>
+              <hr>
+              {% if error_msg %}
+                  <div class="alert alert-danger">{{ error_msg }}</div>
+              {% endif %}
+              <div class="form-group">
                   <label for="fname">UserName:</label>
                   <input type="text" class="form-control" placeholder="Enter your User Name" name='uname'>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-md-6 mb-4 pb-2">
-
-                      <div class="form-outline">
-                        <label for="fname">First Name:</label>
-                        <input type="text" class="form-control" placeholder="Enter your first name" name='fname'>
-                      </div>
-
-                    </div>
-                    <div class="col-md-6 mb-4 pb-2">
-
-                      <div class="form-outline">
-                        <label for="fname">Second Name:</label>
-                        <input type="text" class="form-control" placeholder="Enter your second name" name='sname'>
-                      </div>
-
-                    </div>
-                  </div>
-              <!-- <div class="form-group">
-                <label for="fname">First Name:</label>
-                <input type="text" class="form-control" placeholder="Enter your first name" name='fname'>
-              </div> -->
-              <!-- <br>
-              <div class="form-group">
-                <label for="fname">Second Name:</label>
-                <input type="text" class="form-control" placeholder="Enter your second name" name='sname'>
-              </div> -->
-            
-            
-
-              <!-- <div class="form-group">
-                <label for="fname">Email:</label>
-                <input type="email" class="form-control" placeholder="Enter your email" name='email'>
-              </div> -->
-
+              </div>
+              <br>
               <div class="row">
-                    <div class="col-md-6 mb-4 pb-2">
-
+                  <div class="col-md-6 mb-4 pb-2">
                       <div class="form-outline">
-                        <label for="fname">Password:</label>
-                        <input type="password" class="form-control" placeholder="Enter your password" name='pass'>
+                          <label for="fname">First Name:</label>
+                          <input type="text" class="form-control" placeholder="Enter your first name" name='fname'>
                       </div>
-
-                    </div>
-                    <div class="col-md-6 mb-4 pb-2">
-
-                      <div class="form-outline">
-                        <label for="fname">Confirm Password:</label>
-                        <input type="password" class="form-control" placeholder="Enter your password" name='confirmpass'>
-                      </div>
-
-                    </div>
                   </div>
-              <!-- <div class="form-group">
-                <label for="fname">Password:</label>
-                <input type="password" class="form-control" placeholder="Enter your password" name='pass'>
-              </div> -->
-     
+                  <div class="col-md-6 mb-4 pb-2">
+                      <div class="form-outline">
+                          <label for="fname">Second Name:</label>
+                          <input type="text" class="form-control" placeholder="Enter your second name" name='sname'>
+                      </div>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-md-6 mb-4 pb-2">
+                      <div class="form-outline">
+                          <label for="fname">Password:</label>
+                          <input type="password" class="form-control" placeholder="Enter your password" name='pass'>
+                      </div>
+                  </div>
+                  <div class="col-md-6 mb-4 pb-2">
+                      <div class="form-outline">
+                          <label for="fname">Confirm Password:</label>
+                          <input type="password" class="form-control" placeholder="Enter your password" name='confirmpass'>
+                      </div>
+                  </div>
+              </div>
               <button type="submit" class="btn btn-primary">SUBMIT</button>
               <p>Already have an account? <a href="{% url 'login-page' %}">Login</a></p>
-            </form>
+          </form>
+          
+
           </div>
         </div>
        </div>
       </div>
-
-      <!-- <img src="{% static 'images/nit.png'%}"> -->
-      <img src="{% static 'images/nit.png' %}" class="img-fluid" alt="My Image">
-
-    <div class="container">
-        <nav class="navbardown fixed-bottom navbar-light bg-info">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">@2022-2023 NATIONAL INSTITUTE OF TRANSPORT</a>
+      <!-- footer start here -->
+        <footer class="footer">
+            <div class="container">
+              <span class="text-light"><a>@2022-2023 NATIONAL INSTITUTE OF TRANSPORT</a></span>
             </div>
-          </nav>
-    </div>
+        </footer>
    </body>
  </html>
  {% endblock content %}
