--- a/FINALPROJOCT/templates/mtihani/add_exam.html
+++ b/FINALPROJOCT/templates/mtihani/add_exam.html
@@ -280,7 +280,7 @@ $(document).ready(function(){
 					
 				</div>
 			</div>
-			<form method="POST" action="{% url 'mtihani:select_questions' %}">
+			<form method="POST" action="{% url 'mtihani:exam_manage' %}">
                 {% csrf_token %}
                 <div class="row g-1">
                     <div class="col">
@@ -291,122 +291,31 @@ $(document).ready(function(){
                         {{ form.semeter }}
                       </div>
                     </div>
-                    <div class="col">
-                    
-                      <div class="form-outline">
-                        <!-- <input type="text" id="form9Example3" name="topic" class="form-control" /> -->
-                        <label class="form-label" for="form9Example3">Course</label>
-                        {{ form.course }}
-                      </div>
-                    </div>
+                  
 
-                    <div class="col">
-                    
-                        <div class="form-outline">
-                          <!-- <input type="text" id="form9Example3" name="topic" class="form-control" /> -->
-                          <label class="form-label" for="form9Example3">Module</label>
-                          {{ form.module }}
-                        </div>
-                      </div>
                   </div>
                   
                   <hr />
                   
                   <!-- Gutter g-5 -->
                   <div class="row g-5">
-                    <div class="col">
-                      <!-- Name input -->
-                      <div class="form-outline">
-                        <!-- <input type="text" id="form9Example3" name="questiontype" class="form-control" /> -->
-                        <label class="form-label" for="form9Example3">ExaminationType</label>
-                        {{ form.examinationType }}
-                        
-                      </div>
-                    </div>
+                    
                     <div class="col">
                       <!-- Email input -->
                       <div class="form-outline">
                         <!-- <input type="text" id="form9Example3" name="questionLevel" class="form-control" /> -->
                         <label class="form-label" for="form9Example3">ExaminationName</label>
-                        {{ form.examinationName }}
+                        {{ form.exam_name }}
                       </div>
                     </div>
                   </div>
                   <br>
                   <hr>
 
-				  <div class="row g-1">
-                    <div class="col">
-                      <!-- Name input -->
-                      <div class="form-outline">
-						<label for="num_questions">Number of multiple-choice questions:</label>
-    					<input type="number" name="num_questions" id="num_questions" required><br><br>
-                      </div>
-                    </div>
-                    <div class="col">
-                    
-                      <div class="form-outline">
-						<label for="num_shortquestions">Number of short-answer questions:</label>
-						<input type="number" name="num_shortquestions" id="num_shortquestions" required><br><br>
-                      </div>
-                    </div>
-
-                    <div class="col">
-                    
-                        <div class="form-outline">
-							<label for="num_longquestions">Number of long-answer questions:</label>
-							<input type="number" name="num_longquestions" id="num_longquestions" required><br><br>
-                        </div>
-                      </div>
-                  </div>
-                  
+				 
 
 
-				  
-                  <hr>
-                  <div class="row g-1">
-                    <div class="col">
-                      <!-- Name input -->
-                      <div class="form-outline">
-                        <!-- <input type="text" id="form9Example1" name="somo" class="form-control" /> -->
-                        <label class="form-label" for="form9Example1">ExamDuration</label>
-                        {{ form.examDuration }}
-                      </div>
-                    </div>
-                    <div class="col">
-                    
-                      <div class="form-outline">
-                        <!-- <input type="text" id="form9Example3" name="topic" class="form-control" /> -->
-                        <label class="form-label" for="form9Example3">ExamFullmark</label>
-                        {{ form.examFullmark }}
-                      </div>
-                    </div>
-
-                  </div>
-                  <hr>
-                  <div class="row g-5">
-                    
-                    <div class="col">
-                        <!-- Email input -->
-                        <div class="col">
-                    
-                        <div class="form-outline">
-                          <!-- <input type="text" id="form9Example3" name="topic" class="form-control" /> -->
-                          <label class="form-label" for="form9Example3">QuestionSection</label>
-                          {{ form.questionSection }}
-                        </div>
-                      </div>
-                      </div>
-
-                      <div class="col">
-                    
-                        <div class="form-outline">
-                          <!-- <input type="text" id="form9Example3" name="topic" class="form-control" /> -->
-                          <label class="form-label" for="form9Example3">QuestionSection</label>
-                          {{ form.questionSection }}
-                        </div>
-                      </div>
-                  </div>
+				
                   <div class="mt-5">
 					<button type="submit" class="btn btn-primary">Submit</button>
 					<button type="reset" class="btn btn-secondary ms-2">Reset</button>
