--- a/FINALPROJOCT/templates/mtihani/exam_manage.html
+++ b/FINALPROJOCT/templates/mtihani/exam_manage.html
@@ -277,10 +277,7 @@ $(document).ready(function(){
 					<div class="col-sm-6">
 						<h2>Manage <b>Exam</b></h2>
 					</div>
-					<div class="col-sm-6">
-						<a href="#addCourseModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Module</span></a>
-						<a href="#deleteCourseModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						
-					</div>
+					
 				</div>
 			</div>
 			<table class="table table-striped table-hover">
@@ -288,7 +285,7 @@ $(document).ready(function(){
                     <thead>
                         <tr>
                             <!-- <th>examinationType</th> -->
-                            <th>course</th>
+                            <th>examinationName</th>
                             <th>semeter</th> 
 							<!-- <th>Generate Exam</th> -->
                            
@@ -297,7 +294,7 @@ $(document).ready(function(){
                     {% for exam in exam_manage %}
                     <tr>
                        
-                        <td>{{ exam.course }}</td>
+                        <td>{{ exam.exam_name }}</td>
                         <td>{{ exam.semeter }}</td>
 						<td>
 							<!-- <button class="btn btn-primary">Generate Exam</button> -->
