--- a/FINALPROJOCT/templates/mtihani/generate_exam.html
+++ b/FINALPROJOCT/templates/mtihani/generate_exam.html
@@ -277,14 +277,12 @@ $(document).ready(function(){
 					<div class="col-sm-6">
 						<h2>Manage <b>Exam</b></h2>
 					</div>
-					<div class="col-sm-6">
-						<a href="#addCourseModal" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Module</span></a>
-						<a href="#deleteCourseModal" class="btn btn-danger" data-toggle="modal"><i class="material-icons">&#xE15C;</i> <span>Delete</span></a>						
-					</div>
+					
 				</div>
 			</div>
 			<form method="POST" action="{% url 'mtihani:select_questions' %}">
                 {% csrf_token %}
+				<!-- <h1>Question {{ counter }}</h1> -->
                 <div class="row g-1">
                     <div class="col">
                       <!-- Name input -->
@@ -424,6 +422,7 @@ $(document).ready(function(){
 					<button type="reset" class="btn btn-secondary ms-2">Reset</button>
 					
 				</div>
+				
             </form>
 		
 		</div>
