--- a/FINALPROJOCT/templates/FYPAPP/module_manage.html
+++ b/FINALPROJOCT/templates/FYPAPP/module_manage.html
@@ -168,7 +168,10 @@ table.table .avatar {
 			</table>
 		
 		</div>
-	</div>        
+	</div>  
+	<h3>ffffffffffffff</h3> 
+	<h1>Total Questions: {{ question_count }}</h1>
+	    
 </div>
 
 
